--- a/GW_data_Processing_exercise.ipynb
+++ b/GW_data_Processing_exercise.ipynb
@@ -2178,32 +2178,26 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
         "\n",
         "f = [8,8,8,0]\n",
         "np.zeros_like(f)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dt2V2FdLrwo7",
-        "outputId": "d6517a0d-560a-4b80-d081-46ef9e6cee2d"
+        "id": "dt2V2FdLrwo7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hiurhewuhwoihoijeiojjoqirjijrqjijqirjijwrwiji"
+      ],
+      "metadata": {
+        "id": "_R2o_-fR0ZBv"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0, 0, 0, 0])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
+      "outputs": []
     }
   ],
   "metadata": {
@@ -2219,7 +2213,7 @@
         "-O_azPC_OB1U"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyMjGRPsp6Lhi4HUlZaRYSLt",
+      "authorship_tag": "ABX9TyOUU5P1xyZDgfE4eLTF/ZBi",
       "include_colab_link": true
     },
     "kernelspec": {
